force-app/main/default/objects/Claim/fields/Agentforce_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Agentforce_Session_Id__c</fullName>
    <description>Links this claim back to the AI_Interaction_Log__c session that created it.</description>
    <externalId>true</externalId>
    <label>Agentforce Session ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>