force-app/main/default/objects/Claim/fields/AI_Confidence__c.field-meta.xml
<CustomField>
    <fullName>AI_Confidence__c</fullName>
    <description>Confidence score 0-100 generated by the agent for the recommendation.</description>
    <label>AI Confidence</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>