force-app/main/default/objects/Claim/fields/AI_Image_Analysis__c.field-meta.xml
<CustomField>
    <fullName>AI_Image_Analysis__c</fullName>
    <label>AI Image Analysis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>