force-app/main/default/objects/Claim/fields/AI_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>AI_Recommendation__c</fullName>
    <description>Agent recommendation for the approver based on grounded warranty data.</description>
    <label>AI Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Needs Clarification</fullName>
                <default>true</default>
                <label>Needs Clarification</label>
            </value>
            <value>
                <fullName>Manual Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>