force-app/main/default/objects/Claim/fields/ApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDate__c</fullName>
    <label>Approval Date</label>
    <type>DateTime</type>
</CustomField>