force-app/main/default/objects/Claim/fields/Approver_Queue__c.field-meta.xml
<CustomField>
    <fullName>Approver_Queue__c</fullName>
    <description>Queue or team currently responsible for reviewing the claim.</description>
    <label>Approver Queue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>