force-app/main/default/objects/Claim/fields/Approver_Slack_Ref__c.field-meta.xml
<CustomField>
    <fullName>Approver_Slack_Ref__c</fullName>
    <description>Slack thread or message reference used for the approver workflow.</description>
    <label>Approver Slack Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>