force-app/main/default/objects/Claim/fields/ApproverQueue__c.field-meta.xml
<CustomField>
    <fullName>ApproverQueue__c</fullName>
    <description>Name of the Salesforce Queue the claim is assigned to for approval (e.g. Warranty Claim Approvers).</description>
    <label>Approver Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>