force-app/main/default/objects/Claim/fields/ApproverSlackRef__c.field-meta.xml
<CustomField>
    <fullName>ApproverSlackRef__c</fullName>
    <label>Approver Slack Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>