force-app/main/default/objects/Claim/fields/AttachmentCount__c.field-meta.xml
<CustomField>
    <fullName>AttachmentCount__c</fullName>
    <label>Attachment Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>