force-app/main/default/objects/Claim/fields/Authorization_Type__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Type__c</fullName>
    <description>Business category of the warranty authorization request.</description>
    <label>Authorization Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prior Authorization</fullName>
                <default>true</default>
                <label>Prior Authorization</label>
            </value>
            <value>
                <fullName>Post Repair Claim</fullName>
            </value>
            <value>
                <fullName>Goodwill Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>