force-app/main/default/objects/Claim/fields/AuthorizationPdfUrl__c.field-meta.xml
<CustomField>
    <fullName>AuthorizationPdfUrl__c</fullName>
    <description>Public URL of the warranty prior-authorization PDF generated at approval time. Populated by GenerateApprovalAuthorization after the ContentDistribution is created. Persists across approver/dealer interactions so the URL never has to be regenerated.</description>
    <label>Authorization PDF URL</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>