force-app/main/default/objects/Claim/fields/Clarification_Request__c.field-meta.xml
<CustomField>
    <fullName>Clarification_Request__c</fullName>
    <description>Latest clarification requested from the dealer by the approver or agent.</description>
    <label>Clarification Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>