force-app/main/default/objects/Claim/fields/ClarificationRequest__c.field-meta.xml
<CustomField>
    <fullName>ClarificationRequest__c</fullName>
    <label>Clarification Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>