force-app/main/default/objects/Claim/fields/Dealer_Priority_Flag__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Priority_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by Agentforce when the claim involves a safety-critical part or a Gold-tier dealer with SLA obligations.</description>
    <label>Priority Flag</label>
    <type>Checkbox</type>
</CustomField>