force-app/main/default/objects/Claim/fields/Dealer_WhatsApp_Number__c.field-meta.xml
<CustomField>
    <fullName>Dealer_WhatsApp_Number__c</fullName>
    <description>WhatsApp number used for the dealer-side warranty claim conversation.</description>
    <label>Dealer WhatsApp Number</label>
    <type>Phone</type>
</CustomField>