force-app/main/default/objects/Claim/fields/DealerResponseSummary__c.field-meta.xml
<CustomField>
    <fullName>DealerResponseSummary__c</fullName>
    <label>Dealer Response Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>