force-app/main/default/objects/Claim/fields/DealerWhatsAppNumber__c.field-meta.xml
<CustomField>
    <fullName>DealerWhatsAppNumber__c</fullName>
    <label>Dealer WhatsApp Number</label>
    <type>Phone</type>
</CustomField>