force-app/main/default/objects/Claim/fields/Decision_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Decision_Rationale__c</fullName>
    <description>Final explanation stored with the approval or rejection decision.</description>
    <label>Decision Rationale</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>