force-app/main/default/objects/Claim/fields/DecisionPath__c.field-meta.xml
<CustomField>
    <fullName>DecisionPath__c</fullName>
    <formula>IF(
  ISBLANK(ApprovalDate__c),
  IF(TEXT(Status) = &quot;Rejected&quot;, &quot;Rejected&quot;, &quot;Pending&quot;),
  IF(
    (ApprovalDate__c - CreatedDate) &lt;= 0.0007,
    &quot;Auto-Approved&quot;,
    &quot;Manual-Approved&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Decision Path</label>
    <type>Text</type>
</CustomField>