force-app/main/default/objects/Claim/fields/DecisionRationale__c.field-meta.xml
<CustomField>
    <fullName>DecisionRationale__c</fullName>
    <label>Decision Rationale</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>