force-app/main/default/objects/Claim/fields/DecisionTimeHours__c.field-meta.xml
<CustomField>
    <fullName>DecisionTimeHours__c</fullName>
    <formula>IF(
  NOT(ISBLANK(ApprovalDate__c)),
  (ApprovalDate__c - CreatedDate) * 24,
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Decision Time (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>