force-app/main/default/objects/Claim/fields/Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Eligibility__c</fullName>
    <label>Eligibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>