force-app/main/default/objects/Claim/fields/EligibilityRationale__c.field-meta.xml
<CustomField>
    <fullName>EligibilityRationale__c</fullName>
    <label>Eligibility Rationale</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>