force-app/main/default/objects/Claim/fields/EstimatedCost__c.field-meta.xml
<CustomField>
    <fullName>EstimatedCost__c</fullName>
    <label>Estimated Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>