force-app/main/default/objects/Claim/fields/External_DMS_Reference__c.field-meta.xml
<CustomField>
    <fullName>External_DMS_Reference__c</fullName>
    <description>External dealer management system reference for the claim or repair order.</description>
    <label>External DMS Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>