force-app/main/default/objects/Claim/fields/Fraud_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Risk_Score__c</fullName>
    <description>Risk score used to highlight potentially suspicious claims for secondary review.</description>
    <label>Fraud Risk Score</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>