force-app/main/default/objects/Claim/fields/LastDealerInteraction__c.field-meta.xml
<CustomField>
    <fullName>LastDealerInteraction__c</fullName>
    <label>Last Dealer Interaction</label>
    <type>DateTime</type>
</CustomField>