force-app/main/default/objects/Claim/fields/Missing_Info_Flag__c.field-meta.xml
<CustomField>
    <fullName>Missing_Info_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the claim is missing information needed for a decision.</description>
    <label>Missing Info Flag</label>
    <type>Checkbox</type>
</CustomField>