force-app/main/default/objects/Claim/fields/MissingInfoFlag__c.field-meta.xml
<CustomField>
    <fullName>MissingInfoFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missing Info Flag</label>
    <type>Checkbox</type>
</CustomField>