force-app/main/default/objects/Claim/fields/Part__c.field-meta.xml
<CustomField>
    <fullName>Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Part</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Claim</relationshipLabel>
    <relationshipName>Claim</relationshipName>
    <type>Lookup</type>
</CustomField>