force-app/main/default/objects/Claim/fields/PartCategory__c.field-meta.xml
<CustomField>
    <fullName>PartCategory__c</fullName>
    <label>Part Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>