force-app/main/default/objects/Claim/fields/PhotoPublicUrl__c.field-meta.xml
<CustomField>
    <fullName>PhotoPublicUrl__c</fullName>
    <description>Public ContentDistribution URL of the most recent dealer-uploaded damage photo. Populated by ImageDamageAnalyzer when a photo is processed. Surfaced on the approver Slack card so the human reviewer can click through to the actual image (not just the AI textual analysis).</description>
    <label>Photo Public URL</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>