force-app/main/default/objects/Claim/fields/RejectionDate__c.field-meta.xml
<CustomField>
    <fullName>RejectionDate__c</fullName>
    <label>Rejection Date</label>
    <type>DateTime</type>
</CustomField>