force-app/main/default/objects/Claim/fields/Repair_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Repair_Order_Number__c</fullName>
    <description>Dealer repair order number tied to the warranty authorization request.</description>
    <label>Repair Order Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>