force-app/main/default/objects/Claim/fields/Requires_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Requires_Follow_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the claim requires a follow-up question or clarification from the dealer.</description>
    <label>Requires Follow Up</label>
    <type>Checkbox</type>
</CustomField>