force-app/main/default/objects/Claim/fields/RequiresFollowUp__c.field-meta.xml
<CustomField>
    <fullName>RequiresFollowUp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Follow Up</label>
    <type>Checkbox</type>
</CustomField>