force-app/main/default/objects/Claim/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Technical debt field to unblock flow deployment. The standard &apos;Status&apos; field should be used instead.</description>
    <label>Status (Legacy)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>