force-app/main/default/objects/Claim/fields/Submission_Channel__c.field-meta.xml
<CustomField>
    <fullName>Submission_Channel__c</fullName>
    <description>Channel used by the dealer to submit the warranty prior authorization request.</description>
    <label>Submission Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web Chat</fullName>
                <default>true</default>
                <label>Web Chat</label>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Slack</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Salesforce UI</fullName>
                <isActive>false</isActive>
                <label>Salesforce UI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>