force-app/main/default/objects/Claim/fields/SubmissionChannel__c.field-meta.xml
<CustomField>
    <fullName>SubmissionChannel__c</fullName>
    <label>Submission Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>