force-app/main/default/objects/Claim/fields/TelemetrySignal__c.field-meta.xml
<CustomField>
    <fullName>TelemetrySignal__c</fullName>
    <description>Rolled-up vehicle telemetry signal from Data Cloud. Written by TelemetrySignalTrigger when a TelemetrySignal__e platform event fires for a VIN tied to this claim&apos;s vehicle.</description>
    <label>Telemetry Signal</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>