force-app/main/default/objects/Claim/recordTypes/Goodwill_Exception.recordType-meta.xml
<RecordType>
    <fullName>Goodwill_Exception</fullName>
    <active>true</active>
    <description>Used for claims handled outside standard coverage rules and evaluated as goodwill exceptions.</description>
    <label>Goodwill Exception</label>
</RecordType>