force-app/main/default/objects/Claim/recordTypes/Post_Repair_Claim.recordType-meta.xml
<RecordType>
    <fullName>Post_Repair_Claim</fullName>
    <active>true</active>
    <description>Used for warranty claims submitted after repair work has already been completed.</description>
    <label>Post Repair Claim</label>
</RecordType>