force-app/main/default/objects/Claim/recordTypes/Prior_Authorization.recordType-meta.xml
<RecordType>
    <fullName>Prior_Authorization</fullName>
    <active>true</active>
    <description>Used for dealer prior authorization requests before a warranty repair or replacement is finalized.</description>
    <label>Prior Authorization</label>
</RecordType>