force-app/main/default/objects/Claim/listViews/Warranty_Claim_Approvers_Claim.listView-meta.xml
<ListView>
    <fullName>Warranty_Claim_Approvers_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>Warranty Claim Approvers</label>
    <queue>Warranty_Claim_Approvers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>