force-app/main/default/objects/Claim/listViews/Warranty_Claim_Critical_Claim.listView-meta.xml
<ListView>
    <fullName>Warranty_Claim_Critical_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>Warranty Claim Critical</label>
    <queue>Warranty_Claim_Critical</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>